# lacuna-wiki

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
docs/design/: 2026-04-14-v2-design-draft.md  mcp-surface.md
docs/superpowers/plans/: 2026-04-14-add-source.md  2026-04-14-adversary-commit.md  2026-04-14-daemon.md  2026-04-14-foundation.md  2026-04-14-ingest-modes.md  2026-04-14-key-derivation-move-source.md  2026-04-14-mcp-server.md  2026-04-14-skill-rewrite-epistemics.md  2026-04-14-skills-install.md  2026-04-14-url-source.md  2026-04-15-sweep.md
docs/superpowers/specs/: 2026-04-15-sweep-design.md  2026-04-15-synthesise-design.md  2026-04-19-daemon-concurrency-sweep-design.md
src/lacuna_wiki/: config.py  tokens.py  vault.py
src/lacuna_wiki/cli/: _warn.py  add_source.py  adversary_commit.py  claims.py  daemon.py  init.py  install_skills.py  main.py  mcp_cmd.py  move_source.py  status.py  sweep.py  sync.py
src/lacuna_wiki/daemon/: api.py  connections.py  parser.py  process.py  sync.py  watcher.py
src/lacuna_wiki/db/: schema.py
src/lacuna_wiki/mcp/: audit.py  format.py  navigate.py  search.py  server.py  synthesise.py
src/lacuna_wiki/skills/: adversary.md  ingest.md  query.md  sweep.md  synthesise.md
src/lacuna_wiki/sources/: chunker.py  embedder.py  extractor.py  fetcher.py  key.py  metadata.py  register.py  (+1 more)
src/llm_wiki/: vault.py
tests/: conftest.py  test_add_source.py  test_adversary_commit.py  test_audit.py  test_claims.py  test_config.py  test_daemon_integration.py  test_daemon_pause.py  test_frontmatter.py  test_init.py  test_install_skills.py  test_mcp_integration.py  test_move_source.py  test_schema.py  test_status.py  test_synthesise.py  test_vault.py  test_yt_integration.py
tests/cli/: test_sweep.py
tests/daemon/: test_api.py  test_connections.py  test_parser.py  test_process.py  test_sync.py  test_watcher.py
tests/mcp/: test_format.py  test_navigate.py  test_search.py  test_server.py
tests/sources/: test_chunker.py  test_embedder.py  test_extractor.py  test_fetcher.py  test_key.py  test_metadata.py  test_register.py  test_youtube.py
(+47 files in other folders)
