[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-wiki"
version = "2.0.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "duckdb>=0.10.0",
    "rich>=13.0",
    "tomli-w>=1.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "watchdog>=3.0",
    "psutil>=5.9",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "respx>=0.20"]

[project.scripts]
llm-wiki = "llm_wiki.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_wiki"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
